--- a/ShelfMagnetic/Podfile
+++ b/ShelfMagnetic/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '9.0'
 
 target 'ShelfMagnetic' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -8,7 +8,6 @@ target 'ShelfMagnetic' do
   # Pods for ShelfMagnetic
     pod 'AFNetworking'
     pod 'MJRefresh'
-    pod 'Shelfmagnetic'
 
   target 'ShelfMagneticTests' do
     inherit! :search_paths
